use fixed LLVM_full_jl's

--- a/.github/workflows/julia.yml
+++ b/.github/workflows/julia.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        julia-version: ['1.3', '1.4']
+        julia-version: ['1.4', 'nightly']
         os: [self-hosted]
     
     timeout-minutes: 30 
@@ -18,49 +18,27 @@ jobs:
         uses: actions/checkout@v1
         with:
           fetch-depth: 1
+      - name: "Cleanup"
+        run: |
+          rm -rf ${HOME}/julia
       - name: "Set up Julia"
         uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.julia-version }}
-      - name: "Download LLVM -- new way"
-        if: matrix.julia-version == 'nightly'
+      - name: "Download LLVM & build Ennzyme"
         run: |
-          julia -e 'using Pkg; pkg"add LLVM_full_jll"'
+          LLVM_MAJOR_VER=`julia -e "print(Base.libllvm_version.major)"`
+          julia -e "using Pkg; pkg\"add LLVM_full_jll@${LLVM_MAJOR_VER}\""
           LLVM_DIR=`julia -e "using LLVM_full_jll; print(LLVM_full_jll.artifact_dir)"`
-          # workaround https://github.com/JuliaPackaging/Yggdrasil/issues/652
-          sudo mkdir -p /workspace
-          sudo cp -r ${LLVM_DIR} /workspace/destdir
-          sudo mkdir -p /workspace/destdir/bin/
-          sudo ln -s  /workspace/destdir/tools/opt /workspace/destdir/bin/opt
-          sudo ln -s  /workspace/destdir/tools/FileCheck /workspace/destdir/bin/FileCheck
-          sudo ln -s  /workspace/destdir/tools/llvm-config /workspace/destdir/bin/llvm-config
-        env:
-          JULIA_PROJECT: "/tmp/proj"
-
-      - name: "Download LLVM -- old way"
-        if: matrix.julia-version == 1.3 || matrix.julia-version == 1.4
-        run: |
-          julia -e 'using Pkg; pkg"add LLVM_jll"'
-          ARTIFACT_DIR=`julia -e "using LLVM_jll; print(LLVM_jll.artifact_dir)"`
-          echo "ARTIFACT_DIR=${ARTIFACT_DIR}"
-          # workaround https://github.com/JuliaPackaging/Yggdrasil/issues/652
-          sudo mkdir -p /workspace
-          sudo cp -r ${ARTIFACT_DIR} /workspace/destdir
-          sudo mkdir -p /workspace/destdir/bin/
-          sudo ln -s  /workspace/destdir/tools/opt /workspace/destdir/bin/opt
-          sudo ln -s  /workspace/destdir/tools/FileCheck /workspace/destdir/bin/FileCheck
-          sudo ln -s  /workspace/destdir/tools/llvm-config /workspace/destdir/bin/llvm-config
-        env:
-          JULIA_PROJECT: "/tmp/proj"
-
-      - name: "Build Enzyme"
-        run: |
+          echo "LLVM_DIR=$LLVM_DIR"
           mkdir build
           cd build
           cmake --version
-          cmake -DLLVM_DIR=/workspace/destdir/lib/cmake/llvm \
-                -DLLVM_EXTERNAL_LIT=/workspace/destdir/tools/lit/lit.py ../enzyme
+          cmake -DLLVM_DIR=${LLVM_DIR} \
+                -DLLVM_EXTERNAL_LIT=${LLVM_DIR}/tools/lit/lit.py ../enzyme
           make -j
+        env:
+          JULIA_PROJECT: "/tmp/proj"
       - name: "Julia tests"
         run: |
           cd build
