Add benchmarking code

--- a/enzyme/CMakeLists.txt
+++ b/enzyme/CMakeLists.txt
@@ -83,6 +83,35 @@ if(Julia_FOUND)
     endif()
 endif()
 
+include(ExternalProject)
+ExternalProject_Add(adept2
+    GIT_REPOSITORY https://github.com/rjhogan/Adept-2
+    GIT_TAG 4dc3d72c25d120a80745c44599dc8602a4f8fdeb
+    PREFIX adept2
+    BUILD_IN_SOURCE 1
+    INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}
+    CONFIGURE_COMMAND autoreconf -i && ./configure 
+    INSTALL_COMMAND ""
+    UPDATE_COMMAND ""
+    TEST_COMMAND      ""
+)
+ExternalProject_Add(tapenade
+    URL http://www-tapenade.inria.fr:8080/tapenade/ADFirstAidKit.tar
+    PREFIX tapenade
+    BUILD_IN_SOURCE 1
+    INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}
+    CONFIGURE_COMMAND ""
+    BUILD_COMMAND make adBinomial.o adBuffer.o adContext.o adProfile.o adStack.o
+    INSTALL_COMMAND ""
+    TEST_COMMAND      ""
+)
+
+
+set(BENCH_FLAGS "-I${CMAKE_CURRENT_BINARY_DIR}/adept2/src/adept2/include -I${CMAKE_CURRENT_BINARY_DIR}/tapenade/src/tapenade")
+set(BENCH_LINK "${CMAKE_CURRENT_BINARY_DIR}/tapenade/src/tapenade/adBuffer.o ${CMAKE_CURRENT_BINARY_DIR}/tapenade/src/tapenade/adStack.o -L${CMAKE_CURRENT_BINARY_DIR}/adept2/install/lib -ladept")
+set(BENCH_LDPATH "${CMAKE_CURRENT_BINARY_DIR}/adept2/install/lib")
+message("found bench flags: " ${BENCH_FLAGS})
+
 add_subdirectory(Enzyme)
 add_subdirectory(test)
 add_subdirectory(benchmarks)
