--- a/enzyme/benchmarks/lit.site.cfg.py.in
+++ b/enzyme/benchmarks/lit.site.cfg.py.in
@@ -7,8 +7,11 @@ config.llvm_tools_dir = "@LLVM_TOOLS_BINARY_DIR@"
 config.llvm_libs_dir = "@LLVM_LIBS_DIR@"
 config.enzyme_obj_root = "@ENZYME_BINARY_DIR@"
 config.target_triple = "@TARGET_TRIPLE@"
-
+config.bench_flags = "@BENCH_FLAGS@"
+config.bench_link = "@BENCH_LINK@"
+config.bench_ldpath = "@BENCH_LDPATH@"
 config.llvm_shlib_ext = "@LLVM_SHLIBEXT@"
+
 
 config.targets_to_build = "@TARGETS_TO_BUILD@"
 
@@ -38,7 +41,10 @@ config.excludes = ['Inputs']
 
 config.substitutions.append(('%shlibext', config.llvm_shlib_ext))
 config.substitutions.append(('%lli', config.llvm_tools_dir + "/lli"))
-config.substitutions.append(('%opt', config.llvm_tools_dir + "/opt"))
+config.substitutions.append(('%lli', config.llvm_tools_dir + "/lli"))
+config.substitutions.append(('%bench', config.bench_flags))
+config.substitutions.append(('%blink', config.bench_link))
+config.substitutions.append(('%bldpath', config.bench_ldpath))
 config.substitutions.append(('%clang', config.llvm_tools_dir + "/clang"))
 config.substitutions.append(('%loadEnzyme', ''
                                  + ' -load=@ENZYME_BINARY_DIR@/Enzyme/LLVMEnzyme-' + config.llvm_ver + config.llvm_shlib_ext
