--- a/enzyme/benchmarks/logsumexp/CMakeLists.txt
+++ b/enzyme/benchmarks/logsumexp/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Run regression and unit tests
-add_lit_testsuite(bench-nn "Running enzyme benchmarks tests"
+add_lit_testsuite(bench-logsumexp "Running enzyme benchmarks tests"
     ${CMAKE_CURRENT_BINARY_DIR}
     DEPENDS ${ENZYME_BENCH_DEPS}
     ARGS -v
