--- a/enzyme/benchmarks/taylorlog/CMakeLists.txt
+++ b/enzyme/benchmarks/taylorlog/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Run regression and unit tests
-add_lit_testsuite(bench-taylorlog "Running enzyme bencmarks tests"
+add_lit_testsuite(bench-taylorlog "Running enzyme benchmarks tests"
     ${CMAKE_CURRENT_BINARY_DIR}
-    DEPENDS ${ENZYME_TEST_DEPS}
+    DEPENDS ${ENZYME_BENCH_DEPS}
     ARGS -v
 )
