Add jacobian adjoint mult for possible neural ode

--- a/enzyme/benchmarks/CMakeLists.txt
+++ b/enzyme/benchmarks/CMakeLists.txt
@@ -49,6 +49,10 @@ add_subdirectory(nn)
 add_subdirectory(taylorlog)
 add_subdirectory(logsumexp)
 add_subdirectory(matdescent)
+add_subdirectory(ode)
+add_subdirectory(ode-const)
+add_subdirectory(ode-real)
+add_subdirectory(fft)
 
 add_subdirectory(gmm)
 add_subdirectory(ba)
