Additional cleanups and support llvm 11

--- a/enzyme/CMakeLists.txt
+++ b/enzyme/CMakeLists.txt
@@ -59,7 +59,12 @@ file(READ ${LLVM_IDIR}/llvm/Analysis/ScalarEvolution.h INPUT_TEXT)
 string(REPLACE private public INPUT_TEXT "${INPUT_TEXT}")
 file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/include/SCEV/ScalarEvolution.h" "${INPUT_TEXT}")
 
+if (${LLVM_VERSION_MAJOR} GREATER_EQUAL 11)
+file(READ ${LLVM_IDIR}/llvm/Transforms/Utils/ScalarEvolutionExpander.h INPUT_TEXT)
+else()
 file(READ ${LLVM_IDIR}/llvm/Analysis/ScalarEvolutionExpander.h INPUT_TEXT)
+endif()
+
 string(REPLACE "#define LLVM_ANALYSIS_SCALAREVOLUTIONEXPANDER_H" "#define LLVM_ANALYSIS_SCALAREVOLUTIONEXPANDER_H\n#include \"SCEV/ScalarEvolution.h\""  INPUT_TEXT "${INPUT_TEXT}")
 string(REPLACE "LLVM_ANALYSIS" "FAKELLVM_ANALYSIS" INPUT_TEXT "${INPUT_TEXT}")
 string(REPLACE "class SCEVExpander" "namespace fake {\n  class SCEVExpander" INPUT_TEXT "${INPUT_TEXT}")
