--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        llvm: ["7"]
+        llvm: ["7",  "8", "9", "10"]
         build: ["Release", "Debug"] # "RelWithDebInfo"
         os: [self-hosted]
     timeout-minutes: 90 
