Fix macos build

--- a/enzyme/CMakeLists.txt
+++ b/enzyme/CMakeLists.txt
@@ -19,6 +19,9 @@ set(ENZYME_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
 list(APPEND CMAKE_MODULE_PATH "${ENZYME_SOURCE_DIR}/cmake/modules")
 
 set(LLVM_SHLIBEXT "${CMAKE_SHARED_MODULE_SUFFIX}")
+if (APPLE)
+    set(LLVM_SHLIBEXT ".dylib")
+endif()
 message( LLVM_SHLIBEXT = ${LLVM_SHLIBEXT} )
 
 get_filename_component(LLVM_ABSOLUTE_DIR
