--- a/enzyme/Enzyme/CMakeLists.txt
+++ b/enzyme/Enzyme/CMakeLists.txt
@@ -12,6 +12,7 @@ list(APPEND ENZYME_SRC  TypeAnalysis/TypeTree.cpp TypeAnalysis/TypeAnalysis.cpp 
 
 message("found enzyme sources " ${ENZYME_SRC})
 
+
 if (${LLVM_VERSION_MAJOR} LESS 8)
     add_llvm_loadable_module( LLVMEnzyme-${LLVM_VERSION_MAJOR}
         ${ENZYME_SRC}
@@ -19,6 +20,10 @@ if (${LLVM_VERSION_MAJOR} LESS 8)
         intrinsics_gen
         PLUGIN_TOOL
         opt
+    #LINK_COMPONENTS
+    #Core
+    #Analysis
+    #ScalarOpts
     )
 else()
 # on windows `PLUGIN_TOOL` doesn't link against LLVM.dll
@@ -32,13 +37,25 @@ if ((WIN32 OR CYGWIN) AND LLVM_LINK_LLVM_DYLIB)
 	LLVM
     )
 else()
+    #set(LLVM_LINK_COMPONENTS Core Analysis ScalarOpts)
     add_llvm_library( LLVMEnzyme-${LLVM_VERSION_MAJOR}
         ${ENZYME_SRC}
         MODULE
         DEPENDS
         intrinsics_gen
+        #LLVMCore
         PLUGIN_TOOL
         opt
+    #LINK_COMPONENTS
+    #Core
+    #Analysis
+    #ScalarOpts
     )
 endif()
+endif()
+
+if (APPLE)
+# Darwin-specific linker flags for loadable modules.
+set_target_properties(LLVMEnzyme-${LLVM_VERSION_MAJOR} PROPERTIES
+    LINK_FLAGS "-Wl,-flat_namespace -Wl,-undefined -Wl,suppress")
 endif()
