--- a/enzyme/benchmarks/ode-const/Makefile.makeafter
+++ b/enzyme/benchmarks/ode-const/Makefile.makeafter
@@ -14,7 +14,7 @@ ode-unopt.ll: ode.cpp
 	clang++ $(BENCH) $^ -O1 -Xclang -disable-llvm-passes -fno-use-cxa-atexit -fno-exceptions -fno-vectorize -fno-slp-vectorize -ffast-math -fno-unroll-loops -o $@ -S -emit-llvm
 
 ode-raw.ll: ode-adept-unopt.ll ode-unopt.ll
-	opt ode-unopt.ll $(LOAD) -enzyme -o ode-enzyme.ll -S -enzyme_loosetypes
+	opt ode-unopt.ll $(LOAD) -enzyme -o ode-enzyme.ll -S
 	llvm-link ode-adept-unopt.ll ode-enzyme.ll -o $@
 
 %-opt.ll: %-raw.ll
