--- a/enzyme/Enzyme/CMakeLists.txt
+++ b/enzyme/Enzyme/CMakeLists.txt
@@ -24,6 +24,17 @@ if (${LLVM_VERSION_MAJOR} LESS 8)
     #Analysis
     #ScalarOpts
     )
+    add_llvm_loadable_module( ClangEnzyme-${LLVM_VERSION_MAJOR}
+        ${ENZYME_SRC} Clang/EnzymeClang.cpp
+        DEPENDS
+        intrinsics_gen
+        PLUGIN_TOOL
+        opt
+    #LINK_COMPONENTS
+    #Core
+    #Analysis
+    #ScalarOpts
+    )
 else()
 # on windows `PLUGIN_TOOL` doesn't link against LLVM.dll
 if ((WIN32 OR CYGWIN) AND LLVM_LINK_LLVM_DYLIB)
@@ -35,10 +46,31 @@ if ((WIN32 OR CYGWIN) AND LLVM_LINK_LLVM_DYLIB)
 	LINK_COMPONENTS
 	LLVM
     )
+    add_llvm_library( ClangEnzyme-${LLVM_VERSION_MAJOR}
+        ${ENZYME_SRC} Clang/EnzymeClang.cpp
+        MODULE
+        DEPENDS
+        intrinsics_gen
+	LINK_COMPONENTS
+	LLVM
+    )
 else()
     #set(LLVM_LINK_COMPONENTS Core Analysis ScalarOpts)
     add_llvm_library( LLVMEnzyme-${LLVM_VERSION_MAJOR}
         ${ENZYME_SRC}
+        MODULE
+        DEPENDS
+        intrinsics_gen
+        #LLVMCore
+        PLUGIN_TOOL
+        opt
+    #LINK_COMPONENTS
+    #Core
+    #Analysis
+    #ScalarOpts
+    )
+    add_llvm_library( ClangEnzyme-${LLVM_VERSION_MAJOR}
+        ${ENZYME_SRC} Clang/EnzymeClang.cpp
         MODULE
         DEPENDS
         intrinsics_gen
