--- a/enzyme/CMakeLists.txt
+++ b/enzyme/CMakeLists.txt
@@ -73,6 +73,14 @@ else()
 file(READ ${LLVM_IDIR}/llvm/Analysis/ScalarEvolutionExpander.h INPUT_TEXT)
 endif()
 
+find_package(MPI)
+if (${MPI_FOUND})
+    add_definitions(-DBUILDMPI)
+    include_directories(SYSTEM ${MPI_C_INCLUDE_PATH})
+else()
+    set(MPI_C_LIBRARIES "")
+endif()
+
 string(REPLACE "#define LLVM_ANALYSIS_SCALAREVOLUTIONEXPANDER_H" "#define LLVM_ANALYSIS_SCALAREVOLUTIONEXPANDER_H\n#include \"SCEV/ScalarEvolution.h\""  INPUT_TEXT "${INPUT_TEXT}")
 string(REPLACE "LLVM_ANALYSIS" "FAKELLVM_ANALYSIS" INPUT_TEXT "${INPUT_TEXT}")
 string(REPLACE "class SCEVExpander " "namespace fake {\n  class SCEVExpander " INPUT_TEXT "${INPUT_TEXT}")
