--- a/enzyme/Enzyme/CMakeLists.txt
+++ b/enzyme/Enzyme/CMakeLists.txt
@@ -5,14 +5,11 @@
 file(GLOB ENZYME_SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
     "*.cpp"
 )
-
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 list(APPEND ENZYME_SRC SCEV/ScalarEvolutionExpander.cpp)
 list(APPEND ENZYME_SRC  TypeAnalysis/TypeTree.cpp TypeAnalysis/TypeAnalysis.cpp TypeAnalysis/TypeAnalysisPrinter.cpp)
-
-message("found enzyme sources " ${ENZYME_SRC})
 
 if (${LLVM_VERSION_MAJOR} LESS 8)
     add_llvm_loadable_module( LLVMEnzyme-${LLVM_VERSION_MAJOR}
@@ -86,6 +83,12 @@ else()
     )
 endif()
 endif()
+
+add_library( Enzyme-${LLVM_VERSION_MAJOR}
+    SHARED
+    ${ENZYME_SRC}    
+)
+target_link_libraries(Enzyme-${LLVM_VERSION_MAJOR} LLVM)
 
 if (APPLE)
 # Darwin-specific linker flags for loadable modules.
