--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -39,6 +39,6 @@ jobs:
           cd enzyme/build 
           cmake .. -DLLVM_EXTERNAL_LIT=/usr/lib/llvm-${{ matrix.llvm }}/build/utils/lit/lit.py -DCMAKE_BUILD_TYPE=${{ matrix.build }} -DLLVM_DIR=/usr/lib/llvm-${{ matrix.llvm }}/lib/cmake/llvm
     - name: make
-      run: cd enzyme/build && make -j
+      run: cd enzyme/build && make -j`nproc`
     - name: make check-enzyme-integration
-      run: cd enzyme/build && make check-enzyme-integration -j
+      run: cd enzyme/build && make check-enzyme-integration -j`nproc`
