--- a/.github/workflows/enzyme.yml
+++ b/.github/workflows/enzyme.yml
@@ -33,8 +33,8 @@ jobs:
           cd enzyme/build 
           cmake .. -DLLVM_EXTERNAL_LIT=/usr/lib/llvm-${{ matrix.llvm }}/build/utils/lit/lit.py -DCMAKE_BUILD_TYPE=${{ matrix.build }} -DLLVM_DIR=/usr/lib/llvm-${{ matrix.llvm }}/lib/cmake/llvm
     - name: make
-      run: cd enzyme/build && make -j
+      run: cd enzyme/build && make -j`nproc`
     - name: make check-typeanalysis
-      run: cd enzyme/build && make check-typeanalysis -j
+      run: cd enzyme/build && make check-typeanalysis -j`nproc`
     - name: make check-enzyme
-      run: cd enzyme/build && make check-enzyme -j
+      run: cd enzyme/build && make check-enzyme -j`nproc`
