add Enzyme to install target list (#99)

--- a/enzyme/Enzyme/CMakeLists.txt
+++ b/enzyme/Enzyme/CMakeLists.txt
@@ -89,6 +89,7 @@ add_library( Enzyme-${LLVM_VERSION_MAJOR}
     ${ENZYME_SRC}    
 )
 target_link_libraries(Enzyme-${LLVM_VERSION_MAJOR} LLVM)
+install(TARGETS Enzyme-${LLVM_VERSION_MAJOR} DESTINATION lib)
 
 if (APPLE)
 # Darwin-specific linker flags for loadable modules.
