--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,6 +1,6 @@
 name: Clang-Format
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
   build:
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-20.04
     
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
       with:
           fetch-depth: 1
     - uses: DoozyX/clang-format-lint-action@v0.11
