Distributed minimal source archives -- take 2 (#135)
* Add export ignores to produce small tarballs
* Do not add benchmarks subdirectory
* Include benchmarks directory if present
* Use checkout@v1 action

The v2 action seems to ignore files marked with `export-ignore` in the .gitattributes file.

See https://github.community/t/using-container-checkout-doesnt-checkout-hidden-files/18429

* fix the CI apocalypse
* [CMAKE] fix EXISTS test

Co-authored-by: Noah D. Brenowitz <nbren12@gmail.com>

--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -3,10 +3,10 @@ name: C/C++ CI
 on: 
   push:
     branches:
-    - master
+    - main
   pull_request:
     branches:
-    - master
+    - main
 
 jobs:
   build:
@@ -29,7 +29,7 @@ jobs:
           sudo apt-get install -y autoconf cmake gcc g++ libtool gfortran llvm-${{ matrix.llvm }}-dev libomp-${{ matrix.llvm }}-dev clang-${{ matrix.llvm }} libeigen3-dev libboost-dev
           sudo pip install lit
           sudo touch /usr/lib/llvm-${{ matrix.llvm }}/bin/yaml-bench
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v1
       with:
           fetch-depth: 1
     - name: mkdir
