--- a/enzyme/CMakeLists.txt
+++ b/enzyme/CMakeLists.txt
@@ -98,4 +98,9 @@ include_directories("${CMAKE_CURRENT_BINARY_DIR}/include")
 
 add_subdirectory(Enzyme)
 add_subdirectory(test)
-add_subdirectory(benchmarks)
+
+# The benchmarks data are not in git-exported source archives to minimize size.
+# Only add the benchmarks if the directory exists.
+if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/benchmarks")
+    add_subdirectory(benchmarks)
+endif()
