--- a/enzyme/test/CMakeLists.txt
+++ b/enzyme/test/CMakeLists.txt
@@ -7,6 +7,7 @@ configure_lit_site_cfg(
 
 set(ENZYME_TEST_DEPS LLVMEnzyme-${LLVM_VERSION_MAJOR})
 
+add_subdirectory(ActivityAnalysis)
 add_subdirectory(TypeAnalysis)
 add_subdirectory(Enzyme)
 add_subdirectory(Integration)
